@@ -3,6 +3,7 @@
 #include "magicstrings.h"
 #include "flags.h"
 #include "dbbasic.h"
+#include "dbplugin.h"
 #include "kw_taglib_update_metadata.hpp"
 #include "logging.h"
 
@@ -38,44 +39,51 @@ static int do_on_init(void *obj)
 
 static int initializations(void)
 {
-	/* hypothetical metadata table creation & tags 
-	 * add_mime_type("Audio"); -> 
+	/* hypothetical metadata table creation & tags
+	 * add_mime_type("Audio"); ->
 	 * 	string = "create table if not exists <mime_type> (fno integer);
 	 * 	add_tag(TAG_AUDIO, SYSTEM_TAG);
 	 * 	add_association(TAG_AUDIO, TAG_ROOT, ASSOC_SUBGROUP);
 	 * add_metadata_type("Audio", "Artist"); ->
 	 * 	ALTER TABLE <mime_type> ADD COLUMN "metadata_type" {text};
 	 * 	add_tag(TAG_ARTIST, SYSTEM_TAG);
-	 	add_meta_info(TAG_AUDIO, TAG_ARTIST);
-	 	add_association(TAG_ARTIST, TAG_AUDIO, ASSOC_SUBGROUP);
+	 * 	add_meta_info(TAG_AUDIO, TAG_ARTIST);
+	 * 	add_association(TAG_ARTIST, TAG_AUDIO, ASSOC_SUBGROUP);
 	 * add_metadata_type("Audio, Artist"); ->
 	 * 	ALTER TABLE <mime_type> ADD COLUMN "metadata_type" {text};
-		add_tag(TAG_ALBUM, SYSTEM_TAG);
-		add_meta_info(TAG_AUDIO, TAG_ALBUM);
-		add_association(TAG_ALBUM, TAG_AUDIO, ASSOC_SUBGROUP);
+	 * 	add_tag(TAG_ALBUM, SYSTEM_TAG);
+	 * 	add_meta_info(TAG_AUDIO, TAG_ALBUM);
+	 * 	add_association(TAG_ALBUM, TAG_AUDIO, ASSOC_SUBGROUP);
 	 * add_metadata_type("Audio, Artist"); ->
 	 * 	ALTER TABLE <mime_type> ADD COLUMN "metadata_type" {text};
-		add_tag(TAG_GENRE, SYSTEM_TAG);
-		add_meta_info(TAG_AUDIO, TAG_GENRE);
-		add_association(TAG_GENRE, TAG_AUDIO, ASSOC_SUBGROUP);
-	 */
-	/* Create tags to browse Audio Files */
+	 * 	add_tag(TAG_GENRE, SYSTEM_TAG);
+	 * 	add_meta_info(TAG_AUDIO, TAG_GENRE);
+	 * 	add_association(TAG_GENRE, TAG_AUDIO, ASSOC_SUBGROUP);
+	 *
+
+	/ * Create tags to browse Audio Files * /
 	add_tag(TAG_AUDIO, SYSTEM_TAG);
 	add_tag(TAG_ARTIST, SYSTEM_TAG);
 	add_tag(TAG_ALBUM, SYSTEM_TAG);
 	add_tag(TAG_GENRE, SYSTEM_TAG);
-	
-	/* Metadata available for Audio Files */
+
+	/ * Metadata available for Audio Files * /
 	add_meta_info(TAG_AUDIO, TAG_ARTIST);
 	add_meta_info(TAG_AUDIO, TAG_ALBUM);
 	add_meta_info(TAG_AUDIO, TAG_GENRE);
-	
-	/* Establish tag-tag associations */
+
+	/ * Establish tag-tag associations * /
 	add_association(TAG_AUDIO, TAG_ROOT, ASSOC_SUBGROUP);
 	add_association(TAG_ARTIST, TAG_AUDIO, ASSOC_SUBGROUP);
 	add_association(TAG_ALBUM, TAG_AUDIO, ASSOC_SUBGROUP);
 	add_association(TAG_GENRE, TAG_AUDIO, ASSOC_SUBGROUP);
-	
+	*/
+
+	add_mime_type(TAG_AUDIO);
+	add_metadata_type(TAG_AUDIO, TAG_ARTIST);
+	add_metadata_type(TAG_AUDIO, TAG_ALBUM);
+	add_metadata_type(TAG_AUDIO, TAG_GENRE);
+
 	log_msg("plugin taglib has added database entries\n");
 	return KW_SUCCESS;
 }
@@ -84,7 +92,7 @@ static int do_on_cleanup(struct kw_metadata *s)
 {
 	int i=0;
 	char *memchar = NULL;
-	
+
 	if (s->type != NULL) {
 		free(s->type);
 	}
@@ -93,7 +101,7 @@ static int do_on_cleanup(struct kw_metadata *s)
 		associate_file_metadata(TAG_ALBUM,s->tagv[2],s->obj);
 		associate_file_metadata(TAG_GENRE,s->tagv[3],s->obj);
 	}
-	
+
 	for(i=0 ; i<s->tagc ; i++) {
 		memchar = s->tagtype[i];
 		if (memchar != NULL) {
@@ -104,7 +112,7 @@ static int do_on_cleanup(struct kw_metadata *s)
 			free(memchar);
 		}
 	}
-	
+
 	/*
 	free(s->tagtype[0]);
 	free(s->tagv[0]);
@@ -124,12 +132,12 @@ static int do_on_cleanup(struct kw_metadata *s)
 static char *format_string(char *string)
 {
 	int i;
-	
+
 	if (string == NULL || string[0] == '\0') {
 		return string;
 	}
 	string[0] = (char)toupper((int)string[0]);
-	
+
 	for (i = 1; string[i] != '\0'; i++) {
 		if (!isalpha(string[i-1])) {
 			string[i] = (char)toupper((int)string[i]);
@@ -142,7 +150,7 @@ static char *format_string(char *string)
 	}
 	/* Remove End of string White Spaces */
 	while (i-- > 0 && string[i] == ' '); string[++i]='\0';
-	
+
 	return string;
 }
 
@@ -151,27 +159,27 @@ static int metadata_extract(const char *filename, struct kw_metadata *s)
 	char *memchar = NULL;
 	s->obj = NULL;
 	s->do_cleanup = &do_on_cleanup;
-	if (!is_of_type(filename)) {		
+	if (!is_of_type(filename)) {
 		return KW_ERROR;
 	}
-	
-	TagLib_File* file = taglib_file_new(filename); 
+
+	TagLib_File* file = taglib_file_new(filename);
 	TagLib_Tag* tag = taglib_file_tag(file);
-	
-	s->type = strdup("Audio");
+
+	s->type = strdup(TAG_AUDIO);
 	s->tagc = 4;
 	s->tagtype = (char **)malloc(4 * sizeof(char *));
 	s->tagv = (char **)malloc(4 * sizeof(char *));
-	
-	memchar = strdup("title");
+
+	memchar = strdup(TAG_TITLE);
 	s->tagtype[0] = memchar;
-	memchar = strdup("artist");
+	memchar = strdup(TAG_ARTIST);
 	s->tagtype[1] = memchar;
-	memchar = strdup("album");
+	memchar = strdup(TAG_ALBUM);
 	s->tagtype[2] = memchar;
-	memchar = strdup("genre");
+	memchar = strdup(TAG_GENRE);
 	s->tagtype[3] = memchar;
-	
+
 	memchar = strdup(taglib_tag_title(tag));
 	memchar = format_string(memchar);
 	s->tagv[0] = memchar;
@@ -184,11 +192,11 @@ static int metadata_extract(const char *filename, struct kw_metadata *s)
 	memchar = strdup(taglib_tag_genre(tag));
 	memchar = format_string(memchar);
 	s->tagv[3] = memchar;
-	
+
 	s->obj = file;
 	s->do_init = &do_on_init;
 	s->do_cleanup = &do_on_cleanup;
-	
+
 	taglib_tag_free_strings();
 	taglib_file_free(file);
 
@@ -197,7 +205,7 @@ static int metadata_extract(const char *filename, struct kw_metadata *s)
 
 static int metadata_update(const char *filename, struct kw_metadata *s)
 {
-	if (!is_of_type(filename)) {		
+	if (!is_of_type(filename)) {
 		return KW_ERROR;
 	}
 	taglib_cpp_update_metadata(filename, s);
@@ -212,7 +220,7 @@ static int on_load(struct plugin_extraction_entry *plugin)
 	initializations();
 	return KW_SUCCESS;
 }
-	
+
 static int on_unload(struct plugin_extraction_entry *plugin)
 {
 	log_msg("plugin on unload\n");
@@ -230,10 +238,10 @@ struct plugin_extraction_entry *load_this_plugin()
 {
 	static struct plugin_extraction_entry *plugin = NULL;
 	if (plugin == NULL) {
-		plugin = (struct plugin_extraction_entry *) 
+		plugin = (struct plugin_extraction_entry *)
 		         malloc(sizeof(struct plugin_extraction_entry));
 		plugin->name = strdup("taglib_audio");
-		plugin->type = strdup("Audio");
+		plugin->type = strdup(TAG_AUDIO);
 		plugin->obj  = NULL;
 		//plugin->thisplugin = this;
 		plugin->is_of_type         = &is_of_type;
@@ -242,9 +250,9 @@ struct plugin_extraction_entry *load_this_plugin()
 		plugin->on_load            = &on_load;
 		plugin->on_unload          = &on_unload;
 	} else {
-		
+
 	}
-	
+
 	return plugin;
 }
 
