@@ -1,3 +1,6 @@
+**2013 Mar 11**
+generalize database structure for plugin architecture
+
 **2013 Mar 06**
 merged branch copy/mpove
 updated branch to current functions
